# SunSense-Blinds

./: .gitignore  CMakeLists.txt  README.md  env.sh  sdkconfig
components/button_controller/: CMakeLists.txt  button_controller.c  button_controller.h  system_types.h
components/encoder_controller/: CMakeLists.txt  encoder_controller.c  encoder_controller.h  system_types.h
components/ldr_controller/: CMakeLists.txt  ldr_controller.c  ldr_controller.h  system_types.h
components/led_controller/: CMakeLists.txt  led_controller.c  led_controller.h  system_types.h
components/microphone_controller/: CMakeLists.txt  microphone_controller.c  microphone_controller.h  system_types.h
components/mode_controller/: CMakeLists.txt  mode_controller.c  mode_controller.h  system_types.h
components/motor_controller/: CMakeLists.txt  motor_controller.c  motor_controller.h  system_types.h
components/oled_display/: CMakeLists.txt  oled_display.c  oled_display.h
components/runtime_state/: CMakeLists.txt  runtime_state.c  runtime_state.h
components/servo_controller/: CMakeLists.txt  servo_controller.c  servo_controller.h  system_types.h
components/sunsense_types/: CMakeLists.txt  system_types.c  system_types.h
components/system_types/: system_types.c
components/voice_command_controller/: CMakeLists.txt  voice_command_controller.c  voice_command_controller.h
docs/: SunSense_System_Overview.html  SunSense_System_Specification.docx
docs/docx_build/word/: document.xml
include/: gpio_config.h  system_types.h
main/: CMakeLists.txt  main.cpp  mqtt_handlers.cpp  mqtt_handlers.h  network.cpp  network.h
tools/: provision_interactive.py  provision_sunsense.py
